# study-with-us

./: .gitignore
7_20/Jun0zo/: lstm.py
7_20/Jun0zo/review_classfication/: bert.py  cluster.py  inference.py  main.py  pyproject.toml
7_20/Jun0zo/review_classfication/tests/1/: test.py  train_data_with_clusters.csv
7_20/Jun0zo/review_classfication/tests/2/: test.py  train_data_with_clusters.csv
7_20/Jun0zo/review_classfication/tests/3/: test.py  test_tsne.py  train_data.csv
7_20/Jun0zo/review_classfication/tests/4/: README.md  test.py  train_data_with_clusters.csv
7_20/Jun0zo/stacked_lstm/: pyproject.toml
7_20/Jun0zo/stacked_lstm/stacked_lstm/: input.csv  lstm.py  result.txt  scaler.pkl  tracked_input_data_epoch_1.csv
study/06_27/: 230627_GAN.pptx
study/07_20/Jun0zo/review_classfication/: bert.py
study/07_20/Jun0zo/stacked_lstm/: pyproject.toml
study/08_10/: 230810_Transformer.pptx
study/7_20/Jun0zo/review_classfication/: train_data.csv
